--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,35 @@
-appdirs==1.4.3
+appdirs==1.4.4
 APScheduler==3.6.3
 CacheControl==0.12.6
-certifi==2019.11.28
+certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
-colorama==0.4.3
-contextlib2==0.6.0
+colorama==0.4.4
+contextlib2==0.6.0.post1
 cryptography==3.1.1
 decorator==4.4.2
-distlib==0.3.0
-distro==1.4.0
-html5lib==1.0.1
+distlib==0.3.1
+distro==1.5.0
+html5lib==1.1
 idna==2.8
 ipaddr==2.2.0
 lockfile==0.12.2
 msgpack==0.6.2
-packaging==20.3
+packaging==20.4
 pep517==0.8.2
 progress==1.5
 pycparser==2.20
-pyparsing==2.4.6
+pyparsing==2.4.7
 python-dotenv==0.14.0
 python-telegram-bot==13.0
 pytoml==0.1.21
 pytz==2020.1
-requests==2.22.0
+requests==2.24.0
 retrying==1.3.3
-six==1.14.0
+six==1.15.0
 tornado==6.0.4
 tzlocal==2.1
-urllib3==1.25.8
+urllib3==1.25.10
 webencodings==0.5.1
 youtube-dl==2020.9.20
 hurry.filesize==0.9
