--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,60 @@
-appdirs==1.4.4
+appdirs==1.4.3
 APScheduler==3.6.3
+astroid==2.4.2
+autopep8==1.5.4
 CacheControl==0.12.6
-certifi==2020.6.20
+cachetools==4.1.1
+certifi==2019.11.28
 cffi==1.14.3
 chardet==3.0.4
-colorama==0.4.4
-contextlib2==0.6.0.post1
+colorama==0.4.3
+contextlib2==0.6.0
 cryptography==3.1.1
 decorator==4.4.2
-distlib==0.3.1
-distro==1.5.0
-html5lib==1.1
+distlib==0.3.0
+distro==1.4.0
+google-api-core==1.22.4
+google-api-python-client==1.12.3
+google-auth==1.22.1
+google-auth-httplib2==0.0.4
+googleapis-common-protos==1.52.0
+html5lib==1.0.1
+httplib2==0.18.1
+hurry.filesize==0.9
 idna==2.8
 ipaddr==2.2.0
+isort==5.6.4
+lazy-object-proxy==1.4.3
 lockfile==0.12.2
+mccabe==0.6.1
 msgpack==0.6.2
-packaging==20.4
+oauth2client==4.1.3
+packaging==20.3
 pep517==0.8.2
 progress==1.5
+protobuf==3.13.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pycparser==2.20
-pyparsing==2.4.7
+PyDrive==1.3.1
+pylint==2.6.0
+pyparsing==2.4.6
 python-dotenv==0.14.0
 python-telegram-bot==13.0
 pytoml==0.1.21
 pytz==2020.1
-requests==2.24.0
+PyYAML==5.3.1
+requests==2.22.0
 retrying==1.3.3
-six==1.15.0
+rope==0.18.0
+rsa==4.6
+six==1.14.0
+toml==0.10.1
 tornado==6.0.4
 tzlocal==2.1
-urllib3==1.25.10
+uritemplate==3.0.1
+urllib3==1.25.8
 webencodings==0.5.1
+wrapt==1.12.1
 youtube-dl==2020.9.20
-hurry.filesize==0.9
