--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,9 @@ pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
 PyDrive==1.3.1
+PyDrive2==1.6.2
 pylint==2.6.0
+pyOpenSSL==19.1.0
 pyparsing==2.4.6
 python-dotenv==0.14.0
 python-telegram-bot==13.0
@@ -57,4 +59,4 @@ uritemplate==3.0.1
 urllib3==1.25.11
 webencodings==0.5.1
 wrapt==1.12.1
-youtube-dl==2020.9.20
+youtube-dl==2020.12.12
