--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ appdirs==1.4.4
 APScheduler==3.6.3
 astroid==2.4.2
 autopep8==1.5.4
+beautifulsoup4==4.9.3
+bs4==0.0.1
 CacheControl==0.12.6
 cachetools==4.1.1
 certifi==2019.11.28
@@ -37,8 +39,9 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
-PyDrive==1.3.1
+PyDrive2==1.6.2
 pylint==2.6.0
+pyOpenSSL==20.0.1
 pyparsing==2.4.6
 python-dotenv==0.14.0
 python-telegram-bot==13.0
@@ -50,12 +53,13 @@ retrying==1.3.3
 rope==0.18.0
 rsa==4.6
 six==1.14.0
+soupsieve==2.1
 toml==0.10.1
 tornado==6.0.4
+tqdm==4.54.1
 tzlocal==2.1
 uritemplate==3.0.1
 urllib3==1.25.11
 webencodings==0.5.1
 wrapt==1.12.1
-youtube-dl==2020.9.20
-tqdm
+youtube-dl==2020.12.14
