--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,64 @@
-appdirs==1.4.4
-APScheduler==3.6.3
-astroid==3.3.9
-autopep8==2.3.2
-cachecontrol==0.14.3
-cachetools==5.5.2
-certifi==2025.4.26
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.2
-colorama==0.4.6
-contextlib2==21.6.0
-cryptography==41.0.5
-decorator==5.2.1
-dill==0.4.0
-distlib==0.3.9
-distro==1.9.0
-google-api-core==2.24.2
-google-api-python-client==2.169.0
-google-auth==2.39.0
-google-auth-httplib2==0.2.0
-googleapis-common-protos==1.70.0
-html5lib==1.1
-httplib2==0.22.0
-hurry.filesize==0.9
-idna==3.10
-ipaddr==2.2.0
-isort==6.0.1
-lazy-object-proxy==1.11.0
-lockfile==0.12.2
-mccabe==0.7.0
-msgpack==1.1.0
-oauth2client==4.1.3
-packaging==25.0
-pep517==0.13.1
-platformdirs==4.3.7
-progress==1.6
-proto-plus==1.26.1
-protobuf==6.30.2
-pyasn1==0.6.1
-pyasn1-modules==0.4.2
-pycodestyle==2.13.0
-pycparser==2.22
-PyDrive==1.3.1
-PyDrive2==1.21.3
-pylint==3.3.6
-pyOpenSSL==24.2.1
-pyparsing==3.2.3
-python-dotenv==1.1.0
+appdirs
+APScheduler
+astroid
+autopep8
+bs4
+CacheControl
+cachetools
+certifi
+cffi
+chardet
+colorama
+contextlib2
+cryptography>=41.0.5
+decorator
+distlib
+distro
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+googleapis-common-protos
+html5lib
+httplib2
+hurry.filesize
+idna
+ipaddr
+isort
+lazy-object-proxy
+lockfile
+mccabe
+msgpack
+oauth2client
+packaging
+pep517
+progress
+protobuf
+pyasn1
+pyasn1-modules
+pycodestyle
+pycparser
+PyDrive
+PyDrive2
+pylint
+pyOpenSSL>=24.0.0
+pyparsing
+python-dotenv
 python-telegram-bot==13.0
-pytoml==0.1.21
-pytoolconfig==1.3.1
-pytz==2025.2
-PyYAML==6.0.2
-requests==2.32.3
-retrying==1.3.4
-rope==1.13.0
-rsa==4.9.1
-six==1.17.0
-toml==0.10.2
-tomli==2.2.1
-tomlkit==0.13.2
-tornado==6.4.2
-typing-extensions==4.13.2
-tzlocal==5.3.1
-uritemplate==4.1.1
-urllib3==2.4.0
-webencodings==0.5.1
-wrapt==1.17.2
-yt-dlp==2025.4.30
+pytoml
+pytz
+PyYAML
+requests
+retrying
+rope
+rsa
+six
+toml
+tornado
+tqdm
+tzlocal
+uritemplate
+urllib3
+webencodings
+wrapt
+yt-dlp
