feat: simplify to local storage only

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,8 @@ services:
         build: .
         env_file:
             - './bot.env'
+        environment:
+            - LOCAL_STORAGE_DIR=/home/bot/data
+        volumes:
+            - ./data:/home/bot/data
+        restart: unless-stopped
